Changed update button css

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -162,9 +162,9 @@
   padding-bottom: 8%;
 }
 
-.form .submit_edit {
-  padding-top: 3%;
-  padding-bottom: 3%;
+.form .update {
+  padding-top: 2.5%;
+  padding-bottom: 2.5%;
 }
 
 .home {
