--- a/app/views/menu_item/edit.html.erb
+++ b/app/views/menu_item/edit.html.erb
@@ -38,7 +38,7 @@
         </h4>
         <input type="text" id = "note-input" name="item_note" value="<%= @item.note %>" />
       </div>
-      <div class="submit_edit">
+      <div class="update">
         <input type="submit" value="Update"/>
       </div>
     </form>
