--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -26,7 +26,7 @@
         </h4>
         <input type="text" id = "description-input" name="section_description" value="<%= @section.description %>" />
       </div>
-      <div class="submit_edit">
+      <div class="update">
         <input type="submit" value="Update" />
       </div>
     </form>
