--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
             <%= link_to 'Menu', sections_path%>
           </a>
           <a>
+            <%= link_to 'Drinks', drinks_path%>
+          </a>
+          <a>
             <%= link_to 'Photos', "http://www.thewalrusbar.com/photos"%>
           </a>
           <a>
