Added Drinks link to all pages

--- a/app/views/drink_sections/edit.html.erb
+++ b/app/views/drink_sections/edit.html.erb
@@ -34,5 +34,6 @@
 </div>
 
 <div class = "home">
-  <%= link_to "Home", sections_path %>
+  <a><%= link_to "Food", sections_path %></a>
+  <a><%= link_to "Drinks", drinks_path %></a>
 </div>
