--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         <%= image_tag ("logo.jpg"), class: "logo" %>
         <div class= "links">
           <a>
-            <%= link_to 'Menu', sections_path%>
+            <%= link_to 'Food', sections_path%>
           </a>
           <a>
             <%= link_to 'Drinks', drinks_path%>
