--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -87,5 +87,6 @@
   </div>
 
   <div class = "home">
-    <a><%= link_to "Home", sections_path %></a>
+    <a><%= link_to "Food", sections_path %></a>
+    <a><%= link_to "Drinks", drinks_path %></a>
   </div>
