--- a/app/views/drink_sections/index.html.erb
+++ b/app/views/drink_sections/index.html.erb
@@ -96,3 +96,7 @@
     </form>
   </div>
 </div>
+<div class = "home">
+  <a><%= link_to "Food", sections_path %></a>
+  <a><%= link_to "Drinks", drinks_path %></a>
+</div>
