--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -66,7 +66,7 @@
       <h3>ERROR!</h3>
         <li><%= column %> <%= error %></li>
       <% end %>
-      <p class = "errors">X close error messages X</p>
+      <p class = "errors">Close Error Message</p>
     </ul>
   <% end %>
 
