--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -6,7 +6,7 @@
 .container {
   display: inline-block;
   width: 100%;
-  height: 300px;
+  height: auto;
 }
 
 .container .anchor {
@@ -16,14 +16,14 @@
 
 .header {
   display: inline-block;
-  width: 80%;
-  padding: 0 0 0 0;
+  width: 90%;
+  margin: 0 5% 0 5%;
 }
 
 .header .logo {
-  display: inline-block;
-  float: left;
-  padding: 0 33% 0 33%;
+  float: none;
+  width: 28%;
+  padding-left: 36%;
 }
 
 .header .links {
@@ -41,8 +41,9 @@
 
 .header p {
   display: inline-block;
-  font-size: 100%;
+  font-size: 88%;
   text-align: center;
+  padding-top: 1%;
 }
 
 .toggle {
@@ -55,7 +56,7 @@
   height: auto;
   width: 67%;
   border: 2px solid #83bccd;
-  margin: 2% 0 0 16%;
+  margin: 1% 0 0 16%;
   text-align: center;
 }
 
@@ -146,10 +147,11 @@
 
 .box {
   display: inline-block;
-  width: 255px;
+  width: 22%;
   text-align: center;
-  margin: 2% 40% 0 40%;
+  margin: 2% 0 0 39%;
   border: 2px dashed #83bccd;
+  height: auto;
 }
 
 .box .submit {
@@ -177,6 +179,8 @@
   text-decoration: none;
   font-size: 20px;
   color: #83bccd;
+  display: block;
+  padding-bottom: 1%;
 }
 
 .form h4 {
@@ -187,17 +191,18 @@
 .popup {
   display: inline-block;
   height: auto;
-  width: auto;
-  border: 2px dashed black;
+  width: 11%;
+  border: 2px dashed #83bccd;
   text-align: center;
-  float: right;
-  padding: 50px;
-  margin: 10px 400px 0 0;
+  float: none;
+  padding: 2%;
+  margin: 3% 0 0 42.5%;
 }
 
 .errors {
-  color: red;
-  border: 1px solid #020202;
+  color: rgba(175, 5, 41, 0.76);
+  border: 2px solid #83bccd;
+  cursor: pointer;
 }
 
 .footer {
