--- a/app/views/drink_sections/index.html.erb
+++ b/app/views/drink_sections/index.html.erb
@@ -22,7 +22,7 @@
               <% if drink_item.drink_section_id == drink.id %>
                 <li>
                   <span class="item"><%=drink_item.name%></span>, <span class="description"><%=drink_item.description%></span>,
-                  <span class="region"><%=drink_item.region%></span>, <span class="price">(<%=drink_item.pricing%>)</span>
+                  <span class="region"><%=drink_item.region%></span> <span class="price">(<%=drink_item.pricing%>)</span>
                 </li>
               <% end %>
             <% end %>
@@ -52,12 +52,7 @@
 
     <h4>20% Service Charge**</h4>
     <p class="notes">
-      *Consuming raw, undercooked, or unpasteurized foods may increase your risk of foodborne illness. <br>
-      Menu items may contain nuts and other allergens.
-      Please let us know if you are allergic to anything.
-    </p>
-    <p class ="notes">
-      ** 100% of this charge is paid to employees. 55% of this charge is paid to employees “directly serving the customer”.
+      wine pricing: (glass/pichet/bottle)
     </p>
     <h4>Thank you for dining at the Walrus and the Carpenter.</h4>
 </div>
