--- a/app/views/drink_sections/index.html.erb
+++ b/app/views/drink_sections/index.html.erb
@@ -51,6 +51,10 @@
 
 
     <h4>20% Service Charge**</h4>
+    <p class ="notes">
+      Please let us know if you are allergic to anything.<br>
+      ** 100% of this charge is paid to employees. 55% of this charge is paid to employees “directly serving the customer”.
+    </p>
     <p class="notes">
       wine pricing: (glass/pichet/bottle)
     </p>
