Changed footer again

--- a/app/views/drink_sections/index.html.erb
+++ b/app/views/drink_sections/index.html.erb
@@ -51,8 +51,9 @@
 
 
     <h4>20% Service Charge**</h4>
-    <p class="notes">
-      wine pricing: (glass/pichet/bottle)
+    <p class ="notes">
+      Please let us know if you are allergic to anything.<br>
+      ** 100% of this charge is paid to employees. 55% of this charge is paid to employees “directly serving the customer”.
     </p>
     <h4>Thank you for dining at the Walrus and the Carpenter.</h4>
 </div>
